--- a/Integrazione.ipynb
+++ b/Integrazione.ipynb
@@ -51,25 +51,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 74,
    "id": "bc3dff0d",
    "metadata": {},
    "outputs": [],
    "source": [
     "def integrale(f, a, b, n):\n",
     "    A=0\n",
+    "    sum_y=0\n",
     "    x = a\n",
     "    dx=(b - a) / n\n",
     "    for i in range(n):\n",
-    "        A= A + dx * f(x)\n",
-    "        print(i, A)\n",
+    "        sum_y= sum_y + f(x)\n",
+    "        ##print(i, A)\n",
     "        x = x+dx\n",
+    "        A=sum_y*dx\n",
     "    return A"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 77,
    "id": "cd4b7657",
    "metadata": {},
    "outputs": [
@@ -77,25 +79,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 0.0\n",
-      "1 0.15027943247108658\n",
-      "2 0.42795961610598443\n",
-      "3 0.7907662601234133\n"
+      "Area sotto la curva =  0.9999999214202395\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "np.float64(0.7907662601234133)"
-      ]
-     },
-     "execution_count": 60,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "integrale(f, 0, np.pi/2, 4)"
+    "Area = integrale(f, 0, np.pi/2, 10000000)\n",
+    "print('Area sotto la curva = ', Area)"
    ]
   }
  ],
